fix: action button visible on dropdown

--- a/app/src/features/apiClient/screens/apiClient/components/sidebar/components/collectionsList/collectionsList.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/sidebar/components/collectionsList/collectionsList.scss
@@ -111,16 +111,18 @@
           visibility: hidden;
           opacity: 0;
           transition: opacity 0.3s;
+
+          &:hover,
+          &.active {
+            background: var(--requestly-color-surface-1);
+            visibility: visible;
+            opacity: 1;
+          }
         }
 
         &:hover .request-options {
           visibility: visible;
           opacity: 1;
-        }
-
-        &:hover,
-        &.active {
-          background: var(--requestly-color-surface-1);
         }
       }
 
@@ -212,6 +214,12 @@
 
             svg {
               color: var(--requestly-color-text-subtle);
+            }
+
+            &:hover,
+            &.active {
+              visibility: visible;
+              opacity: 1;
             }
           }
         }
